--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,44 +2,173 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .header {
-    .header-content {
-        align-items: center;
+    .header-section {
+        position: fixed;
+        width: 100%;
+        max-width: 100%;
+        height: 100px;
+        background: #fff;
+        z-index: 9;
+        box-shadow: 0px 5px 10px rgba(103, 98, 90, 0.1);
 
-        .logo {
-            img {
-                max-width: 250px;
-            }
-        }
-        .menu {
-            width: 100%;
-            height: 100px;
-            display: flex;
+        .header-content {
+            max-width: 1140px;
             align-items: center;
-            justify-content: flex-end;
+            justify-content: space-between;
+            margin: 0 auto;
 
-            .menu-list {
+            @media (max-width: 960px) {
+                justify-content: space-around;
+            }
+
+            .logo {
+                img {
+                    max-width: 250px;
+                }
+            }
+            .menu {
+                width: 100%;
+                height: 100px;
                 display: flex;
-                margin: 0;
+                align-items: center;
+                justify-content: flex-end;
 
-                .nav-item {
+                @media (max-width: 960px) {
+                    display: none;
+                }
+
+                .menu-list {
+                    display: flex;
+                    margin: 0;
+
+                    .nav-item {
+                        list-style: none;
+                        padding: 0.5rem 1rem;
+
+                        .nav-link {
+                            color: #222;
+                            position: relative;
+                            padding: 0;
+                        }
+                    }
+
+                    .active {
+                        .nav-link {
+                            color: $primary;
+
+                            &:after {
+                                position: absolute;
+                                content: "";
+                                top: 110%;
+                                left: 0;
+                                width: 20px;
+                                height: 1px;
+                                background: $primary;
+                            }
+                        }
+                    }
+                }
+            }
+            .hamburger-menu {
+                @media (min-width: 960px) {
+                    display: none;
+                }
+                .mobile-nav {
+                    flex-direction: column;
+                    position: absolute;
+                    top: 60px;
+                    left: 0;
+                    right: 0;
+                    padding-bottom: 17px;
+                    transform: scaleY(0);
+                    transition: 0.4s 0.5s;
+                    transform-origin: center top;
+                    background: $primary;
+                    z-index: 1;
                     list-style: none;
+                    padding: 0;
+                    margin: 0;
+                    display: flex;
+                    width: 100%;
+                    overflow: hidden;
 
-                    .nav-link {
-                        color: #222;
+                    li {
+
+                        &:after {
+                            content: '';
+                            height: 1px;
+                            width: 80%;
+                            position: absolute;
+                            bottom: 0;
+                            left: 10%;
+                        }
+
+                        a {
+                            padding: 10px 20px;
+                            color: #fff;
+                            display: inline-block;
+                            transition: 0.2s;
+                            position: relative;
+
+                            &:nth-child(2n + 1) {
+                                animation: fadeOutRight .8s;
+                                animation-fill-mode: forwards;
+                            }
+                        }
+
+                    }
+                }
+                .toggleMenuButton {
+                    height: 45px;
+                    width: 45px;
+                    font-size: 32px;
+                    color: #222;
+                    background: transparent;
+                    transition: 0.2s;
+                    margin-top: 15px;
+                }
+                .toggleMenu {
+                    transform: scaleY(1);
+                    transition: 0.4s;
+                    box-shadow: inset 0 80px 200px -160px;
+
+                    li {
+                        text-align: center;
+                        position: relative;
+
+                        &:after {
+                            content: "";
+                            height: 1px;
+                            width: 80%;
+                            position: absolute;
+                            bottom: 0;
+                            left: 10%;
+                            background: rgba(255,255,255,0.5);
+                        }
+
+                        a {
+                            color: #fff;
+                            width: 100%;
+
+                            &:nth-child(2n + 1) {
+                                animation: fadeInRight .8s;
+                                animation-fill-mode: forwards;
+                            }
+                        }
                     }
                 }
             }
         }
     }
     .slider {
-        background: url('../images/color.jpg') top center no-repeat;
+        background: url('../images/bw.jpg') top center no-repeat;
         height: 700px;
         position: relative;
 
         &:after {
             position: absolute;
             content: "";
-            background: #C3236D;
+            background: $primary;
             width: 100%;
             height: 39px;
             top: 100%;
@@ -47,6 +176,46 @@ body {
             clip-path: polygon(0 0, 0 100%, 100% 0);
             -webkit-clip-path: polygon(0 0, 0 100%, 101% 0);
             z-index: 2;
+        }
+
+        .slider-description {
+            position: absolute;
+            top: 30%;
+            left: 10%;
+            font-weight: 200;
+
+            @media (max-width: 640px) {
+                top: 20%;
+                left: 0;
+            }
+
+            .hero {
+                font-size: 5rem;
+                display: inline-block;
+                position: relative;
+                color: $primary;
+
+                @media (max-width: 640px) {
+                    font-size: 4rem;
+                }
+
+                &:after {
+                    position: absolute;
+                    content: "";
+                    width: 20%;
+                    height: 1px;
+                    background: #222;
+                    left: 0%;
+                    top: 100%;
+                }
+            }
+
+            .hero-description {
+                font-size: 1.5rem;
+                color: #222;
+                display: block;
+                margin-top: 20px;
+            }
         }
     }
 }
