--- a/sass/components/_cta.scss
+++ b/sass/components/_cta.scss
@@ -9,6 +9,7 @@
 
     @media (max-width: 960px) {
         background-size: cover;
+        background-position: top center;
     }
 
     .cta-content {
